Fixing breaking tests, adding additional test for the Executor API
